--- a/Doc/Bachelor Thesis/references.bib
+++ b/Doc/Bachelor Thesis/references.bib
@@ -76,3 +76,10 @@
 	date = {2015},
 	url = {https://www.mongodb.com/compare/mongodb-mysql},
 }
+
+@online{WordNetPage,
+	author = {Christiane Fellbaum, Randee Tengi},
+	title = {What is WordNet?},
+	date = {2015},
+	url = {https://wordnet.princeton.edu/},
+}
